start fix dark mode

--- a/frontend/src/scss/_fixes.scss
+++ b/frontend/src/scss/_fixes.scss
@@ -9,6 +9,9 @@ button {
 }
 
 // todo: temp c-dark-theme plumbing for select option
+.c-dark-theme {
+  background-color: #34343b;
+}
 .c-dark-theme option {
   background-color: #34343b;
   border: 1px solid #23282c;
